--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CobWeb GIS</title>
     <link rel="shortcut icon " href="/resources/images/cobweb-svgrepo-com (1).svg">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/CobWebGIS/style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
