--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CobWeb GIS</title>
     <link rel="shortcut icon " href="/resources/images/cobweb-svgrepo-com (1).svg">
-    <link rel="stylesheet" href="/CobWebGIS/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
@@ -25,7 +25,7 @@
                 <i class="uil uil-times navCloseBtn"></i>
                 <li><a href="/pages/map.html">Map</a></li>
                 <li><a href="/pages/about.html">About</a></li>
-                <li><a href="/pages/contact.html">Contact</a></li>
+                <li><a href="/CobWebGIS/pages/contact.html">Contact</a></li>
               </ul>
               <button class="button" id="form-open">Account</button>
             </nav>       
