--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <header class="header">
             <nav class="nav">
               <i class="uil uil-bars navOpenBtn"></i>
-              <a href="/index.html">
-                <img class="img-logo" src="/resources/images/cobweb-svgrepo-com (3).png" alt="Hompage">
+              <a href="/CobWebGIS/index.html">
+                <img class="img-logo" src="/CobWebGIS/resources/images/cobweb-svgrepo-com (3).png" alt="Hompage">
               </a>
               <!-- <a href="/layout/home.html" class="logo">CobWeb GIS</a> -->
               <ul class="nav-links">
                 <i class="uil uil-times navCloseBtn"></i>
-                <li><a href="/pages/map.html">Map</a></li>
-                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="/CobWebGIS/pages/map.html">Map</a></li>
+                <li><a href="/CobWebGIS/pages/about.html">About</a></li>
                 <li><a href="/CobWebGIS/pages/contact.html">Contact</a></li>
               </ul>
               <button class="button" id="form-open">Account</button>
@@ -41,8 +41,8 @@
                     Tired of inaccurate and time-consuming land measurement methods? Say goodbye to the days of pacing and guesswork! With our innovative web mapping application, you can now measure your land and property accurately and conveniently from your computer or mobile device.
                   </p>
                   <div class="buttons">
-                    <a href="/pages/map.html" class="join" >Join Now</a>
-                    <a href="/pages/about.html" class="learn">Learn More</a>
+                    <a href="/CobWebGIS/pages/map.html" class="join" >Join Now</a>
+                    <a href="/CobWebGIS/pages/about.html" class="learn">Learn More</a>
                   </div>
                 </div>
               </section>
@@ -137,5 +137,5 @@
     </div>
 </body>
     <!-- JavaScript -->
-    <script src="/script.js"></script>
+    <script src="/CobWebGIS/script.js"></script>
 </html>
