--- a/pages/map.html
+++ b/pages/map.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Cobweb GIS</title>
-    <link rel="stylesheet" href="/pages/map.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/CobWebGIS/pages/map.css" />
+    <link rel="stylesheet" href="/CobWebGIS/style.css" />
     <link
       rel="shortcut icon"
-      href="/resources/images/cobweb-svgrepo-com (1).svg"
+      href="/CobWebGIS/resources/images/cobweb-svgrepo-com (1).svg"
     />
     <link rel="stylesheet" href="/resources/v6.8.0-dist/ol.css" />
     <link
@@ -34,16 +34,16 @@
           <a href="/index.html">
             <img
               class="img-logo"
-              src="/resources/images/cobweb-svgrepo-com (3).png"
+              src="/CobWebGIS/resources/images/cobweb-svgrepo-com (3).png"
               alt="Hompage"
             />
           </a>
           <!-- <a href="/layout/home.html" class="logo">CobWeb GIS</a> -->
           <ul class="nav-links">
             <i class="uil uil-times navCloseBtn"></i>
-            <li><a href="/pages/map.js">Map</a></li>
-            <li><a href="/pages/about.html">About</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/CobWebGIS/pages/map.js">Map</a></li>
+            <li><a href="/CobWebGIS/pages/about.html">About</a></li>
+            <li><a href="/CobWebGIS/pages/contact.html">Contact</a></li>
           </ul>
           <button class="button" id="form-open">Account</button>
         </nav>
@@ -162,6 +162,6 @@
   <script src="/resources/v6.8.0-dist/ol.js"></script>
   <script src="/resources/layerswitcher/ol-layerswitcher.js"></script>
   <script src="/resources/fontawsome/js/all.js"></script>
-  <script src="/script.js"></script>
-  <script src="/pages/map.js"></script>
+  <script src="/CobWebGIS/script.js"></script>
+  <script src="/CobWebGIS/pages/map.js"></script>
 </html>
