--- a/pages/about.html
+++ b/pages/about.html
@@ -7,9 +7,9 @@
     <title>Cobweb GIS - About Us</title>
     <link
       rel="shortcut icon "
-      href="/CobWebGIS/resources/images/cobweb-svgrepo-com (1).svg"
+      href="/resources/images/cobweb-svgrepo-com (1).svg"
     />
-    <link rel="stylesheet" href="/CobWebGIS/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -29,16 +29,16 @@
           <a href="/index.html">
             <img
               class="img-logo"
-              src="/CobWebGIS/resources/images/cobweb-svgrepo-com (3).png"
+              src="/resources/images/cobweb-svgrepo-com (3).png"
               alt="Hompage"
             />
           </a>
           <!-- <a href="/layout/home.html" class="logo">CobWeb GIS</a> -->
           <ul class="nav-links">
             <i class="uil uil-times navCloseBtn"></i>
-            <li><a href="/CobWebGIS/pages/map.html">Map</a></li>
-            <li><a href="/CobWebGIS/pages/about.html">About</a></li>
-            <li><a href="/CobWebGIS/pages/contact.html">Contact</a></li>
+            <li><a href="/pages/map.html">Map</a></li>
+            <li><a href="/pages/about.html">About</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
           <button class="button" id="form-open">Account</button>
         </nav>
@@ -78,6 +78,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="/CobWebGIS/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
