--- a/pages/map.html
+++ b/pages/map.html
@@ -45,6 +45,10 @@
             <li><a href="/pages/about.html">About</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
+          <!-- Inside the header section -->
+          <button class="edge-panel-toggle button" onclick="toggleEdgePanels()">
+            Toggle Panels
+          </button>
           <button class="button" id="form-open">Account</button>
         </nav>
       </header>
