--- a/pages/map.html
+++ b/pages/map.html
@@ -144,7 +144,7 @@
       <!-- Main Page -->
 
       <!-- Aside 1 -->
-      <aside class="aside aside1">
+      <aside class="aside aside1 hidden">
         <div class="coodctn">
           <h1>Coordinates Calc</h1>
 
@@ -179,7 +179,7 @@
       </aside>
 
       <!-- Aside 2 -->
-      <aside class="aside aside2">
+      <aside class="aside aside2 hidden">
         <div id="conversion-form">
           <h1 class="survres">Result</h1>
           <div id="measurementResults">
