--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Main Page -->
         <main class="main">
         
-            <section class="hero-section">
+            <section class="hero-section scrollable-container">
                 <div class="hero">
                   <h3>Measure Your Land and Property Online - Easy and Accurate!</h2>
                   <p>
