--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
       <!-- Main Page -->
       <main class="main">
         <!-- About Us Section -->
-        <section class="about-section">
+        <section class="about-section scrollable-container">
           <div class="content">
             <h2>Welcome to CobWeb GIS</h2>
             <p>
