--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,7 +47,7 @@
       <!-- Main Page -->
       <main class="main">
         <!-- Contact Us Section -->
-        <section class="contact-section">
+        <section class="contact-section scrollable-container">
           <!-- Contact Information -->
           <div class="contact-info">
             <h2>Contact Us</h2>
