--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
                 <div class="hero">
                   <h3>Measure Your Land and Property Online - Easy and Accurate!</h2>
                   <p>
-                    Tired of inaccurate and time-consuming land measurement methods? Say goodbye to the days of pacing and guesswork! With our innovative web mapping application, you can now measure your land and property accurately and conveniently from your computer or mobile device.
+                    Tired of inaccurate and time-consuming land measurement methods? 
+                    <br><br> 
+                    Say goodbye to the days of pacing and guesswork! 
+                    <br><br>
+                    With our innovative web mapping application, you can now measure your land and property accurately and conveniently from your computer or mobile device.
                   </p>
                   <div class="buttons">
                     <a href="/pages/map.html" class="join" >Join Now</a>
