--- a/pages/map.html
+++ b/pages/map.html
@@ -145,6 +145,19 @@
 
       <!-- Aside 1 -->
       <aside class="aside aside1 hidden">
+        <!-- AUTO CONVERTER -->
+        <label for="area"><strong>Converter</strong></label>
+        <div class="input-container">
+          <input type="number" id="area" placeholder="Enter area (sqm)" />
+        </div>
+        <br />
+        <!-- <label for="dense">Plot Density Table</label> -->
+        <select id="dense">
+          <option value="hidens">Selece Plot Density</option>
+          <option value="hidens">High Density Area</option>
+          <option value="medens">Medium Density Area</option>
+          <option value="lodens">Low Density Area</option>
+        </select>
         <div class="coodctn">
           <h1>Coordinates Calc</h1>
 
@@ -162,19 +175,6 @@
             <button id="redoButton" class="coodbtn">Redo</button> -->
             <!-- <p id="result1"></p> -->
           </div>
-          <!-- AUTO CONVERTER -->
-          <label for="area">Converter</label>
-          <div class="input-container">
-            <input type="number" id="area" placeholder="Enter area (sqm)" />
-          </div>
-          <br />
-          <!-- <label for="dense">Plot Density Table</label> -->
-          <select id="dense">
-            <option value="hidens">Selece Plot Density</option>
-            <option value="hidens">High Density Area</option>
-            <option value="medens">Medium Density Area</option>
-            <option value="lodens">Low Density Area</option>
-          </select>
         </div>
       </aside>
 
