--- a/pages/map.html
+++ b/pages/map.html
@@ -109,6 +109,9 @@
               <button title="Clear Measurement" type="button" id="clearBtn">
                 <img src="/resources/images/clear1.svg" alt="" />
               </button>
+              <button id="popup-toggle-btn" onclick="togglePopup()">               
+                <img src="/resources/images/map-info-svgrepo-com.svg" alt="" />
+              </button>
               <!-- <button
                 title="Save Features"
                 type="button"
