--- a/pages/map.html
+++ b/pages/map.html
@@ -79,6 +79,16 @@
             <div id="popup-content"></div>
           </div>
   
+          <div id="rotateBtn" class="rotate-control ol-unselectable ol-control">
+            <img title="Compass" id="rotateIcon" src="/resources/images/compass.svg" alt="Rotate" />
+          </div>
+
+          <!-- Custom Layer Switcher -->
+          <!-- <div id="layerSwitcherBtn" class="layer-switcher-control ol-unselectable ol-control">
+            <img title="Layer Switcher" id="layerSwitcherIcon" src="/resources/images/layers.svg" alt="Layer Switcher" />
+          </div> -->
+
+                                                                                 
           <!-- Measurement Controls -->
           <div id="measurement-controls" class="measurement-controls">
             <div id="type">
@@ -110,7 +120,7 @@
                 <img src="/resources/images/clear1.svg" alt="" />
               </button>
               <button title="Info" id="popup-toggle-btn" onclick="togglePopup()">               
-                <img src="/resources/images/map-info-svgrepo-com.svg" alt="" />
+                <img src="/resources/images/info-svgrepo-com.svg" alt="" />
                 <title></title>
               </button>
               <!-- <button
