--- a/pages/map.html
+++ b/pages/map.html
@@ -149,6 +149,23 @@
                   alt=""
                 />
               </button>
+              <button
+              title="Zoom In"
+              id="zoomInBtn"
+              class="myButton"
+              onclick="toggleZoomInInteraction()"
+            >
+              <img src="/resources/images/zoom_in.svg" alt="" />
+            </button>
+        
+            <button
+              title="Zoom Out"
+              id="zoomOutBtn"
+              class="myButton"
+              onclick="toggleZoomOutInteraction()"
+            >
+              <img src="/resources/images/zoom_out.svg" alt="" />
+            </button>
             </div>
           </div>
         </div>
