--- a/pages/map.html
+++ b/pages/map.html
@@ -149,6 +149,9 @@
                   alt=""
                 />
               </button>
+              <button id="fullscreenBtn" onclick="toggleFullscreen()" title="Toggle Fullscreen">
+                <img src="/resources/images/fullscreen.svg" alt="" />
+              </button>
               <button
               title="Zoom In"
               id="zoomInBtn"
