--- a/pages/map.html
+++ b/pages/map.html
@@ -135,7 +135,7 @@
                 onclick="toggleEdgePanels()"
               >
                 <img
-                  src="/resources/images/split-three-svgrepo-com.svg"
+                  src="/resources/images/side.svg"
                   alt=""
                 />
               </button>
