--- a/pages/map.html
+++ b/pages/map.html
@@ -73,7 +73,7 @@
 
           <!-- Location Search -->
           <div>
-            <label class="search" for="inpt_search">
+            <label class="search">
               <input id="inpt_search" type="text" />
               <div id="suggestions-container"></div>
             </label>
