--- a/pages/map.html
+++ b/pages/map.html
@@ -22,10 +22,10 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    /> -->
   </head>
 
   <body>
@@ -213,7 +213,7 @@
     <script src="/resources/jQuery/jquery-3.6.0.min.js"></script>
     <script src="/resources/v6.8.0-dist/ol.js"></script>
     <script src="/resources/layerswitcher/ol-layerswitcher.js"></script>
-    <script src="/resources/fontawsome/js/all.js"></script>
+    <!-- <script src="/resources/fontawsome/js/all.js"></script> -->
     <script src="/script.js"></script>
     <script src="/pages/map.js"></script>
   </body>
