--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -29,7 +34,7 @@
             <img
               class="img-logo"
               src="/resources/images/cobweb-svgrepo-com (3).png"
-              alt="Homepage"
+              alt="Hompage"
             />
           </a>
           <ul class="nav-links">
@@ -72,106 +77,120 @@
             <div class="form login_form">
               <form action="#">
                 <h2>Login</h2>
+
                 <div class="input_box">
-                  <label for="login-email" class="sr-only">Email</label>
-                  <input
-                    type="email"
-                    id="login-email"
-                    placeholder="Enter your email"
-                    required
-                  />
+                  <input type="email" placeholder="Enter your email" required />
                   <i class="uil uil-envelope-alt email"></i>
                 </div>
                 <div class="input_box">
-                  <label for="login-password" class="sr-only">Password</label>
                   <input
                     type="password"
-                    id="login-password"
                     placeholder="Enter your password"
                     required
                   />
                   <i class="uil uil-lock password"></i>
                   <i class="uil uil-eye-slash pw_hide"></i>
                 </div>
+
                 <div class="option_field">
                   <span class="checkbox">
-                    <input type="checkbox" id="remember-me" />
-                    <label for="remember-me">Remember me</label>
+                    <input type="checkbox" id="check" />
+                    <label for="check">Remember me</label>
                   </span>
                   <a href="#" class="forgot_pw">Forgot password?</a>
                 </div>
+
                 <button class="button">Login Now</button>
+
                 <div class="login_signup">
                   Don't have an account? <a href="#" id="signup">Signup</a>
                 </div>
               </form>
+
+              <!-- Google Sign-In Button -->
+              <div
+                id="g_id_onload"
+                data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
+                data-login_uri="https://www.cobwebgis.com.ng/pages/map.html"
+                data-auto_prompt="false"
+              ></div>
+              <div
+                class="g_id_signin"
+                data-type="standard"
+                data-shape="rectangular"
+                data-theme="outline"
+                data-text="sign_in_with"
+                data-size="large"
+              ></div>
             </div>
 
             <!-- Signup Form -->
             <div class="form signup_form">
               <form action="#">
                 <h2>Signup</h2>
+
                 <!-- New Fields -->
                 <div class="input_box">
-                  <label for="signup-name" class="sr-only">Full Name</label>
-                  <input
-                    type="text"
-                    id="signup-name"
-                    placeholder="Full Name"
-                    required
-                  />
+                  <input type="text" placeholder="Full Name" required />
                   <i class="uil uil-user-circle email"></i>
                 </div>
+
                 <div class="input_box">
-                  <label for="signup-gender" class="sr-only">Gender</label>
-                  <select name="gender" id="signup-gender" required>
+                  <select name="gender" id="gender" required>
                     <option value="" disabled selected>Select Gender</option>
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                   </select>
                   <i class="uil uil-venus-mars email"></i>
                 </div>
+
                 <div class="input_box">
-                  <label for="signup-email" class="sr-only">Email</label>
-                  <input
-                    type="email"
-                    id="signup-email"
-                    placeholder="Enter your email"
-                    required
-                  />
+                  <input type="email" placeholder="Enter your email" required />
                   <i class="uil uil-envelope-alt email"></i>
                 </div>
+
                 <div class="input_box">
-                  <label for="signup-password" class="sr-only"
-                    >Create Password</label
-                  >
                   <input
                     type="password"
-                    id="signup-password"
                     placeholder="Create password"
                     required
                   />
                   <i class="uil uil-lock password"></i>
                   <i class="uil uil-eye-slash pw_hide"></i>
                 </div>
+
                 <div class="input_box">
-                  <label for="confirm-password" class="sr-only"
-                    >Confirm Password</label
-                  >
                   <input
                     type="password"
-                    id="confirm-password"
                     placeholder="Confirm password"
                     required
                   />
                   <i class="uil uil-lock password"></i>
                   <i class="uil uil-eye-slash pw_hide"></i>
                 </div>
+
                 <button class="button">Signup Now</button>
+
                 <div class="login_signup">
                   Already have an account? <a href="#" id="login">Login</a>
                 </div>
               </form>
+
+              <!-- Google Sign-In Button -->
+              <div
+                id="g_id_onload"
+                data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
+                data-login_uri="https://www.cobwebgis.com.ng/pages/map.html"
+                data-auto_prompt="false"
+              ></div>
+              <div
+                class="g_id_signin"
+                data-type="standard"
+                data-shape="rectangular"
+                data-theme="outline"
+                data-text="sign_in_with"
+                data-size="large"
+              ></div>
             </div>
           </div>
         </section>
@@ -185,5 +204,6 @@
 
     <!-- JavaScript -->
     <script src="/script.js"></script>
+    <script src="/google-signin.js"></script>
   </body>
 </html>
