--- a/index.html
+++ b/index.html
@@ -73,125 +73,21 @@
           <div class="form_container">
             <i class="uil uil-times form_close"></i>
 
-            <!-- Login Form -->
-            <div class="form login_form">
-              <form action="#">
-                <h2>Login</h2>
-
-                <div class="input_box">
-                  <input type="email" placeholder="Enter your email" required />
-                  <i class="uil uil-envelope-alt email"></i>
-                </div>
-                <div class="input_box">
-                  <input
-                    type="password"
-                    placeholder="Enter your password"
-                    required
-                  />
-                  <i class="uil uil-lock password"></i>
-                  <i class="uil uil-eye-slash pw_hide"></i>
-                </div>
-
-                <div class="option_field">
-                  <span class="checkbox">
-                    <input type="checkbox" id="check" />
-                    <label for="check">Remember me</label>
-                  </span>
-                  <a href="#" class="forgot_pw">Forgot password?</a>
-                </div>
-
-                <button class="button">Login Now</button>
-
-                <div class="login_signup">
-                  Don't have an account? <a href="#" id="signup">Signup</a>
-                </div>
-              </form>
-
-              <!-- Google Sign-In Button -->
-              <div
-                id="g_id_onload"
-                data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
-                data-login_uri="https://www.cobwebgis.com.ng/pages/map.html"
-                data-auto_prompt="false"
-              ></div>
-              <div
-                class="g_id_signin"
-                data-type="standard"
-                data-shape="rectangular"
-                data-theme="outline"
-                data-text="sign_in_with"
-                data-size="large"
-              ></div>
-            </div>
-
-            <!-- Signup Form -->
-            <div class="form signup_form">
-              <form action="#">
-                <h2>Signup</h2>
-
-                <!-- New Fields -->
-                <div class="input_box">
-                  <input type="text" placeholder="Full Name" required />
-                  <i class="uil uil-user-circle email"></i>
-                </div>
-
-                <div class="input_box">
-                  <select name="gender" id="gender" required>
-                    <option value="" disabled selected>Select Gender</option>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                  </select>
-                  <i class="uil uil-venus-mars email"></i>
-                </div>
-
-                <div class="input_box">
-                  <input type="email" placeholder="Enter your email" required />
-                  <i class="uil uil-envelope-alt email"></i>
-                </div>
-
-                <div class="input_box">
-                  <input
-                    type="password"
-                    placeholder="Create password"
-                    required
-                  />
-                  <i class="uil uil-lock password"></i>
-                  <i class="uil uil-eye-slash pw_hide"></i>
-                </div>
-
-                <div class="input_box">
-                  <input
-                    type="password"
-                    placeholder="Confirm password"
-                    required
-                  />
-                  <i class="uil uil-lock password"></i>
-                  <i class="uil uil-eye-slash pw_hide"></i>
-                </div>
-
-                <button class="button">Signup Now</button>
-
-                <div class="login_signup">
-                  Already have an account? <a href="#" id="login">Login</a>
-                </div>
-              </form>
-
-              <!-- Google Sign-In Button -->
-              <div
-                id="g_id_onload"
-                data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
-                data-login_uri="https://www.cobwebgis.com.ng/pages/map.html"
-                data-auto_prompt="false"
-              ></div>
-              <div
-                class="g_id_signin"
-                data-type="standard"
-                data-shape="rectangular"
-                data-theme="outline"
-                data-text="sign_in_with"
-                data-size="large"
-              ></div>
-            </div>
+            <!-- Google Sign-In Button -->
+            <div
+              id="g_id_onload"
+              data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
+              data-login_uri="https://www.cobwebgis.com.ng"
+              data-auto_prompt="false"
+            ></div>
+            <div
+              class="g_id_signin"
+              data-type="standard"
+              data-shape="rectangular"
+              data-theme="outline"
+              data-text="sign_in_with"
+              data-size="large"
+            ></div>
           </div>
         </section>
       </main>
