--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img
               class="img-logo"
               src="/resources/images/cobweb-svgrepo-com (3).png"
-              alt="Homepage"
+              alt="Hompage"
             />
           </a>
           <ul class="nav-links">
@@ -77,7 +77,7 @@
             <div
               id="g_id_onload"
               data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
-              data-login_uri="https://www.cobwebgis.com.ng/oauth2callback"
+              data-login_uri="https://www.cobwebgis.com.ng/pages/map.html"
               data-auto_prompt="false"
             ></div>
             <div
