--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -73,6 +77,8 @@
             <div
               id="g_id_onload"
               data-client_id="1069144074365-t2m6orjga7vqirk3n1lmlvbmmcm3b4h4.apps.googleusercontent.com"
+              data-context="signin"
+              data-ux_mode="popup"
               data-login_uri="https://www.cobwebgis.com.ng/pages/map.html"
               data-auto_prompt="false"
             ></div>
