--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     </div>
 
     <!-- JavaScript -->
+    <script src="/script.js"></script>
     <script src="/google-signin.js"></script>
   </body>
 </html>
